traefik/test-ingress.yml
# Ingress 文件如下
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: test
spec:
  rules:
  - host: my.test.local
    http:
      paths:
        - path: /test1
          backend:
            serviceName: "test1"
            servicePort: 3000
        - path: /test2
          backend:
            serviceName: "test2"
            servicePort: 3000
