traefik/traefik-ui.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  tls:
  - secretName: traefik-tls-secret
  rules:
  - host: traefik.ui.cs.cloud.com
    http:
      paths:
        - path: 
          backend:
            serviceName: traefik-web-ui
            servicePort: 80
